# PenguinEngine

./: .clang-format  .clang-tidy  .clangformat  .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  Penguin.cpp  Penguin.sln  Penguin.vcxproj  Penguin.vcxproj.filters  PenguinEngine.cpp  PenguinEngine.sln  PenguinEngine.vcxproj  PenguinEngine.vcxproj.filters  README.md  Setup.sh
Debug/: PixelShader.cso  VertexShader.cso
Examples/: Gizmo.ma
Include/: stb_image.h
Lib/: zlibwapi.lib
Resources/Shaders/: VertexShader.hlsl
Source/: Application.cpp
Source/Core/: Application.h  Buffer.h  Compression.h  ErrorCodes.h  IO.h  LinkedList.h  Logging.cpp  Map.h  String.h  Types.h
Source/Core/Core/: Allocator.h  Buffer.h  Classes.h  Compression.h  Core.h  ErrorCodes.h  IO.h  Logging.cpp  Logging.h  Macros.h  String.h
Source/Core/Engine/: Delegate.h  Engine.cpp  Engine.h  Mesh.h  Object.h  ObjectManager.h
Source/Core/Engine/Actors/: Actor.cpp  Actor.h  Camera.h
Source/Core/Importers/: MeshImporter.h  ResourceManager.h  TextureImporter.cpp  TextureImporter.h
Source/Core/Input/: InputHandler.cpp  InputHandler.h  Mouse.h
Source/Core/Math/: Clipping.h  Color.h  Line.h  MathCommon.cpp  MathFwd.h  Plane.h  Rect.h  Vector.h
Source/Core/Renderer/: Font.cpp  Font.h  Grid.h  Settings.h  Shader.h  Texture.h  Viewport.cpp
Source/Core/Renderer/Pipeline/: D3D11.h  Scanline.cpp  Scanline.h
Source/Core/Renderer/UI/: Painter.cpp  Painter.h  Widget.cpp  Widget.h
Source/Editor/: Editor.h  EditorCanvas.cpp  EditorCanvas.h  EditorEngine.cpp  EditorEngine.h  Main.cpp
Source/Engine/: Actor.h  Buffer.h  Component.h  ComponentManager.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Mouse.h  Object.h  ObjectManager.h  StaticMeshActor.h  Timer.h
Source/Engine/Actors/: Actor.h  Camera.cpp  Camera.h  StaticMeshActor.h
Source/Engine/Components/: Component.h  StaticMeshComponent.h
Source/Framework/Renderer/: Tile.h
Source/Framework/Renderer/Pipeline/: D3D11.h  DX11.h  RenderPipeline.h  Scanline.cpp  Scanline.h
Source/Importers/: MeshImporter.h  ResourceManager.h  TextureImporter.cpp  TextureImporter.h
Source/Input/: InputHandler.cpp  InputHandler.h  MouseTracker.h
Source/Math/: Clipping.h  Color.h  Math.h  MathCommon.h  MathFwd.h  Matrix.h  Rect.h  Rotator.h  Spherical.h  Transform.h  Vector.h  VectorIntrinsic.h
Source/Private/Framework/: Application.cpp  Platform.cpp
Source/Private/Framework/Core/: Core.cpp  Logging.cpp
Source/Private/Framework/Engine/: Engine.cpp  Mesh.cpp
Source/Private/Framework/Importers/: ImageImporter.cpp  TextureImporter.cpp
Source/Private/Framework/Input/: InputHandler.cpp
Source/Private/Framework/Renderer/: Camera.cpp  Renderer.cpp  Viewport.cpp
Source/Private/Math/: Color.cpp  MathCommon.cpp  Matrix.cpp  Quat.cpp  Rect.cpp  Rotator.cpp  Vector.cpp
Source/Public/Framework/: Application.h  Platform.h
Source/Public/Framework/Core/: .h  Array.h  Bitmask.h  Buffer.h  Compression.h  Core.h  ErrorCodes.h  IO.h  Iterator.h  Logging.h  PThreadPool.h  String.h  Types.h
Source/Public/Framework/Engine/: Delegate.h  Engine.h  Mesh.h  Object.h  Timer.h
Source/Public/Framework/Importers/: ImageImporter.h  MeshImporter.h  TextureImporter.h
Source/Public/Framework/Input/: InputHandler.h  MouseTracker.h
Source/Public/Framework/Renderer/: Bitmap.h  Camera.h  Channel.h  Grid.h  Renderer.h  Settings.h  Shader.h  Texture.h  Viewport.h
Source/Public/Math/: Color.h  Math.h  MathCommon.h  MathFwd.h  MathImpl.h  Matrix.h  Plane.h  Quat.h  Rect.h  Rotator.h  Spherical.h  Transform.h  Types.h  Vector.h  VectorIntrinsic.h
Source/Renderer/: Camera.cpp  Camera.h  Font.cpp  Font.h  FontTexture.h  Shader.h  Texture.h  Tile.h  Viewport.cpp  Viewport.h
Source/Renderer/Pipeline/: D3D11.cpp  D3D11.h  D3D11Core.h  PixelShader.hlsl  RHI.h  RenderPipeline.h  Scanline.cpp  Scanline.h  VertexShader.hlsl
Source/Renderer/UI/: Painter.cpp  Painter.h  Widget.h
_Source/Core/: Compression.h  Logging.h
_Source/Engine/: Engine.h
_Source/Math/: MathCommon.cpp  VectorIntrinsic.h
_Source/Renderer/: Grid.h  Viewport.h
_Source/Renderer/Pipeline/: D3D11.cpp
source/Framework/: Application.cpp
source/Framework/Core/: Buffer.h  Compression.h  Core.h  Logging.h
source/Framework/Engine/: Delegate.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Object.h
source/Framework/Importers/: MeshImporter.h  TextureImporter.cpp  TextureImporter.h
source/Framework/Input/: InputHandler.h
source/Framework/Renderer/: Camera.cpp  Camera.h  Grid.h  Renderer.cpp  Renderer.h  Settings.h  Shader.h  Texture.h  Viewport.cpp  Viewport.h
source/Math/: Color.h  Math.h  MathCommon.cpp  MathFwd.h  Matrix.h  Quat.h  Rect.h  Transform.h  Vector.h  VectorIntrinsic.h
x64/Debug/: Penguin.exe.recipe  Penguin.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Penguin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Penguin.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
